--- a/ios/thebaby/Info.plist
+++ b/ios/thebaby/Info.plist
@@ -52,13 +52,6 @@
 		<key>UIStatusBarStyle</key>
 		<string>UIStatusBarStyleDefault</string>
 		<key>CFBundleURLTypes</key>
-		<array>
-			<dict>
-				<key>CFBundleURLSchemes</key>
-				<array>
-					<string>myscheme</string>
-				</array>
-			</dict>
-		</array>
+		<array/>
 	</dict>
 </plist>
