--- a/package.json
+++ b/package.json
@@ -17,14 +17,19 @@
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.1",
     "expo": "~44.0.2",
+    "expo-application": "^4.0.2",
+    "expo-auth-session": "~3.5.0",
     "expo-font": "~10.0.4",
     "expo-linear-gradient": "~11.0.3",
+    "expo-random": "^12.1.2",
     "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
+    "expo-web-browser": "~10.1.0",
     "native-base": "^3.3.10",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-app-auth": "^6.4.3",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-svg": "12.1.1",
