--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.1",
     "expo": "~44.0.2",
+    "expo-apple-authentication": "~4.1.0",
     "expo-application": "^4.0.2",
     "expo-auth-session": "~3.5.0",
     "expo-font": "~10.0.4",
